@@ -60,6 +60,7 @@ FEATURE:	Added AHTML2COLOR() and ARGB2COLOR() to support alpha. This is currentl
 FEATURE:	Added the new color GFXTRANSPARENT - only available for RGB888 pixel format on alpha capable displays.
 NOTE:		Alpha support in RGB888 requies an alpha capable display (STM32LTDC 2nd display only currently)
 NOTE:		Alpha support in RGB888 is NOT the standard ARGB8888 format. Only use AHTML2COLOR() and ARGB2COLOR() to create alpha colors.
+FEATURE:    Added nullpointer checks to GDISP image functions (with new error code GDISP_IMAGE_ERR_NULLPOINTER)
 
 
 *** Release 2.7 ***
